[gd_scene load_steps=23 format=3 uid="uid://bvtrcpotdlrif"]

[ext_resource type="Script" path="res://src/actors/player/player.gd" id="1_yu4bv"]
[ext_resource type="Texture2D" uid="uid://bpbbja7lnwicu" path="res://assets/Cloak/AnimationSheet_Character.png" id="2_1bhqb"]
[ext_resource type="Script" path="res://src/_tools/actor/managers/movement/movement_manager.gd" id="2_bgfir"]
[ext_resource type="Script" path="res://src/_tools/actor/managers/movement/behaviors/input_listening_movment_behavior.gd" id="3_ny2un"]
[ext_resource type="Script" path="res://src/_tools/actor/managers/stats/stat_manager.gd" id="4_2t8gm"]
[ext_resource type="Script" path="res://src/actors/player/state machine/idle.gd" id="4_j8eol"]
[ext_resource type="Script" path="res://src/_tools/actor/managers/skills/skill_manager.gd" id="5_1dird"]
[ext_resource type="Script" path="res://AnimationTree.gd" id="5_tgngp"]
[ext_resource type="Script" path="res://src/skills/dash.gd" id="5_vfedi"]
[ext_resource type="Script" path="res://src/actors/player/state machine/player_state_machine.gd" id="6_8a763"]
[ext_resource type="Script" path="res://src/actors/player/state machine/running.gd" id="7_c0eel"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rrla3"]
custom_solver_bias = 0.094
radius = 6.0
height = 28.0

[sub_resource type="Animation" id="Animation_govi2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dmlqh"]
resource_name = "idle"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_cw7d8"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c81ro"]
_data = {
"RESET": SubResource("Animation_govi2"),
"idle": SubResource("Animation_dmlqh"),
"run": SubResource("Animation_cw7d8")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mk1ln"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yc0g4"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gos3q"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_phg0n"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_htfi1"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_hpkhr"]
states/Idle/node = SubResource("AnimationNodeAnimation_mk1ln")
states/Idle/position = Vector2(425, 100)
states/Running/node = SubResource("AnimationNodeAnimation_yc0g4")
states/Running/position = Vector2(625, 100)
transitions = ["Idle", "Running", SubResource("AnimationNodeStateMachineTransition_gos3q"), "Running", "Idle", SubResource("AnimationNodeStateMachineTransition_phg0n"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_htfi1")]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("sprite", "state_machine")]
position = Vector2(4, -3)
script = ExtResource("1_yu4bv")
sprite = NodePath("Sprite2D")
state_machine = NodePath("PlayerStateMachine")

[node name="MovementManager" type="Node" parent="." node_paths=PackedStringArray("movement_behavior")]
script = ExtResource("2_bgfir")
movement_behavior = NodePath("InputListeningMovementBehavior")

[node name="InputListeningMovementBehavior" type="Node" parent="MovementManager"]
script = ExtResource("3_ny2un")

[node name="StatManager" type="Node" parent="."]
script = ExtResource("4_2t8gm")
max_health = 100.0
base_damage = 20.0
base_armor = 10.0
base_magic_resistance = 10.0

[node name="SkillManager" type="Node" parent="." node_paths=PackedStringArray("movement_manager")]
script = ExtResource("5_1dird")
movement_manager = NodePath("../MovementManager")

[node name="Dash" type="Node" parent="SkillManager" node_paths=PackedStringArray("stat_manager")]
script = ExtResource("5_vfedi")
stat_manager = NodePath("../../StatManager")
cooldown = 2000
input_activatable = true
input_event = "ui_select"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(143, 160)
shape = SubResource("CapsuleShape2D_rrla3")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1bhqb")
hframes = 8
vframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c81ro")
}

[node name="ActorAnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c81ro")
}
tree_root = SubResource("AnimationNodeStateMachine_hpkhr")
anim_player = NodePath("../AnimationPlayer")
script = ExtResource("5_tgngp")

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("state", "animation_tree", "movement_manager")]
script = ExtResource("6_8a763")
state = NodePath("PlayerIdleState")
animation_tree = NodePath("../ActorAnimationTree")
movement_manager = NodePath("../MovementManager")

[node name="PlayerIdleState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_j8eol")

[node name="PlayerRunningState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_c0eel")
